tests/ui/rfcs/rfc-2497-if-let-chains/avoid-invalid-mir.stderr
error: expected expression, found `let` statement
  --> $DIR/avoid-invalid-mir.rs:5:6
   |
LL |     !let y = 42;
   |      ^^^

error: aborting due to previous error

